[project]
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
description = "Pricing considerations assignment"
name = "pricing-considerations"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
